[package]
name = "axum-service"
version = "0.1.0"
edition = "2021"

[dependencies]
#http
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.5", features = ["http2", "ws"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }

#tracing
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"

#utils
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.37"
serde = { version = "1.0.197", features = ["derive"] }
futures-util = "0.3.30"
